--- a/notebooks/ac4119/00-exploratory-analysis.ipynb
+++ b/notebooks/ac4119/00-exploratory-analysis.ipynb
@@ -810,6 +810,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "huihkn"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
