--- a/notebooks/ac4119/01-feature-transformation.ipynb
+++ b/notebooks/ac4119/01-feature-transformation.ipynb
@@ -31,6 +31,28 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ex_id', 'user_id', 'prod_id', 'rating', 'label', 'date', 'review'], dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -44,9 +66,29 @@
     "cnt_X_train = cnt_vectorizer.transform(train['review'])\n",
     "tfidf_X_train = tfidf_vectorizer.transform(train['review'])\n",
     "\n",
-    "# cnt_X_test = cnt_vectorizer.transform(X_test['Text'])\n",
-    "# tfidf_X_test = tfidf_vectorizer.transform(X_test['Text'])"
+    "cnt_X_dev = cnt_vectorizer.transform(validation['review'])\n",
+    "tfidf_X_dev = tfidf_vectorizer.transform(validation['review'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y_train = train['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -91,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "term_freq = dict(zip(tfidf_vectorizer.get_feature_names(), tfidf_vectorizer.idf_))"
@@ -331,13 +375,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_model_tfidf = LogisticRegression()\n",
+    "\n",
+    "# Model\n",
+    "model = LogisticRegression()\n",
+    "lr_model_tfidf.fit(tfidf_X_train , Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_hat = lr_model_tfidf.predict_proba(tfidf_X_train)[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3456734749985513"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " average_precision_score(Y_train, y_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_accuracy = lr_model_tfidf.score(tfidf_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8978690498018926"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, roc_curve, auc, roc_auc_score, r2_score, average_precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "lr_model_tfidf = LogisticRegression()"
+    "def fitted_lr(params):\n",
+    "    rfc = RandomForestClassifier(**params)\n",
+    "    fitted_rfc = rfc.fit(X_train, Y_train)\n",
+    "    return fitted_rfc\n",
+    "\n",
+    "def ClassifierMetrics (X_train, Y_train, X_test, Y_test, fitted_model):\n",
+    "    Y_pred = fitted_model.predict_proba(X_test)[:,1]\n",
+    "    train_accuracy = fitted_model.score(X_train, Y_train)\n",
+    "    test_accuracy = fitted_model.score(X_test, Y_test)\n",
+    "    test_auc = roc_auc_score(Y_test, Y_pred)\n",
+    "    test_r2 = r2_score(Y_test, Y_pred)\n",
+    "    average_precision_score(Y_test, Y_pred)\n",
+    "    return train_accuracy, test_accuracy, test_auc, test_r2"
    ]
   }
  ],
