--- a/notebooks/ac4119/02-baseline-model.ipynb
+++ b/notebooks/ac4119/02-baseline-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +155,10 @@
     "tfidf_X_train = tfidf_vectorizer.transform(train['review'])\n",
     "\n",
     "cnt_X_dev = cnt_vectorizer.transform(validation['review'])\n",
-    "tfidf_X_dev = tfidf_vectorizer.transform(validation['review'])"
+    "tfidf_X_dev = tfidf_vectorizer.transform(validation['review'])\n",
+    "\n",
+    "Y_train = train['label']\n",
+    "Y_dev = validation['label']"
    ]
   },
   {
@@ -163,7 +166,184 @@
    "metadata": {},
    "source": [
     "Test Cases\n",
-    "Fully Unbalenced\n"
+    "- Fully Unbalanced\n",
+    "- Each of the CV pairs\n",
+    "\n",
+    "Notes:\n",
+    "Failed to converge at default max iter and at 200 when lbfgs specified as solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# params = {'solver':'lbfgs','max_iter':200, 'random_state':519}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfidf_lr = LogisticRegression()\n",
+    "fitted_tfidf_lr = tfidf_lr.fit(tfidf_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fitted_tfidf_lr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt_lr = LogisticRegression()\n",
+    "fitted_cnt_lr = cnt_lr .fit(cnt_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, roc_auc_score, average_precision_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ClassifierMetrics (X_train, Y_train, X_test, Y_test, fitted_model):\n",
+    "    Y_pred = fitted_model.predict(X_test)\n",
+    "    metrics = {'train_accuracy': fitted_model.score(X_train, Y_train),\n",
+    "    'test_accuracy': fitted_model.score(X_test, Y_test),\n",
+    "    'test_auc': roc_auc_score(Y_test, Y_pred),\n",
+    "    'test_ap': average_precision_score(Y_test, Y_pred)}\n",
+    "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_metrics = ClassifierMetrics (tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_tfidf_lr)\n",
+    "cnt_metrics = ClassifierMetrics (cnt_X_train, Y_train, cnt_X_dev, Y_dev, fitted_cnt_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_accuracy': 0.8923659446517067,\n",
+       " 'test_ap': 0.10739606117677855,\n",
+       " 'test_auc': 0.512061276088812,\n",
+       " 'train_accuracy': 0.9092652088299306}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test_accuracy': 0.897794977448633,\n",
+       " 'test_ap': 0.10501753192530831,\n",
+       " 'test_auc': 0.5048710187208802,\n",
+       " 'train_accuracy': 0.8978690498018926}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_metrics"
    ]
   },
   {
@@ -173,9 +353,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression"
-   ]
+   "source": []
   }
  ],
  "metadata": {
