update (working) code to include undersampling sets

--- a/notebooks/ac4119/03-svm-model.ipynb
+++ b/notebooks/ac4119/03-svm-model.ipynb
@@ -22,20 +22,21 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, average_precision_score\n",
-    "from ttictoc import Timer"
+    "from ttictoc import Timer\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def fitted_svm(params):\n",
+    "def fitted_svm(params, X_train, Y_train):\n",
     "    svm = SVC(**params)\n",
-    "    fitted_svm = svm.fit(tfidf_X_train, Y_train)\n",
+    "    fitted_svm = svm.fit(X_train, Y_train)\n",
     "    return fitted_svm\n",
     "\n",
     "def ClassifierMetrics (X_train, Y_train, X_test, Y_test, fitted_model):\n",
@@ -45,6 +46,21 @@
     "               'test_auc': roc_auc_score(Y_test, Y_pred),\n",
     "               'test_ap': average_precision_score(Y_test, Y_pred)}\n",
     "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "base = '/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/data/processed/dev/'\n",
+    "def load_obj(fname,  base=base):\n",
+    "    # This loads the pickled object.\n",
+    "    with open(base + fname + '.pkl', 'rb') as f:\n",
+    "        return pickle.load(f)"
    ]
   },
   {
@@ -163,6 +179,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_X_train = load_obj('ac4119_tfidf_X_train_set_1')\n",
+    "tfidf_X_dev = load_obj('ac4119_tfidf_X_dev_set_1')\n",
+    "cnt_X_train = load_obj('ac4119_cnt_X_train_set_1')\n",
+    "cnt_X_dev = load_obj('ac4119_cnt_X_dev_set_1')\n",
+    "Y_train = pd.read_csv(base+'ac4119_train_set_1_labels.csv')['label']\n",
+    "Y_dev = pd.read_csv(base+'ac4119_dev_set_1_labels.csv')['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 472.6309884209186\n",
+      "{'train_accuracy': 0.5555555555555556, 'test_accuracy': 0.898435324906732, 'test_auc': 0.5, 'test_ap': 0.101564675093268}\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':'rbf','C':1e-06, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params, tfidf_X_train, Y_train)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "metrics = ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 449.356189024169\n",
+      "Elapsed time: 1182.7099318369292\n",
+      "{'train_accuracy': 0.5555555555555556, 'test_accuracy': 0.898435324906732, 'test_auc': 0.5, 'test_ap': 0.101564675093268}\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':'poly','C':0.0001, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params, tfidf_X_train, Y_train)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "t = Timer()\n",
+    "t.start()\n",
+    "metrics = ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 496.16063185501844\n",
+      "Elapsed time: 1243.9269153978676\n",
+      "{'train_accuracy': 0.5555555555555556, 'test_accuracy': 0.898435324906732, 'test_auc': 0.5, 'test_ap': 0.101564675093268}\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':'linear','C':0.0001, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params, tfidf_X_train, Y_train)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "t = Timer()\n",
+    "t.start()\n",
+    "metrics = ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':'poly','C':0.0001, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params, cnt_X_train, Y_train)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "t = Timer()\n",
+    "t.start()\n",
+    "metrics = ClassifierMetrics(cnt_X_train, Y_train, cnt_X_dev, Y_dev, fitted_model)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:', elapsed)\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y_pred = fitted_model.predict(tfidf_X_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "roc_auc_score(Y_dev, Y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':k,'C':c, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "t = Timer()\n",
+    "t.start()\n",
+    "metrics = ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)\n",
+    "print(metrics)\n",
+    "for m_k in metrics.keys():\n",
+    "    svm_model_params[m_k].append(metrics[m_k])\n",
+    "elapsed = t.stop()\n",
+    "svm_pd = pd.DataFrame(svm_model_params)\n",
+    "results_path = '../../data/processed/svm_svc_tfidf_set_{0}_balanced_results_ac4119.csv'\n",
+    "svm_pd.to_csv(results_path, sep=',')\n",
+    "print('Elapsed time:',elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -201,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)"
@@ -233,7 +462,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "svm_pd = pd.DataFrame(svm_model_params)\n",
