Adding Class Balancing Methodology

--- a/notebooks/ac4119/02-baseline-model.ipynb
+++ b/notebooks/ac4119/02-baseline-model.ipynb
@@ -40,18 +40,13 @@
    "source": [
     "### Balancing Dataset\n",
     "**Methodology:**\n",
-    "    - "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "positive_examples = train[train['label']==1].sample(frac=.8)"
+    "\n",
+    "1. Separate out the negative examples (dominant class)\n",
+    "2. Determine the number of dataframes (`num_splits`) needed to incorporate all negative examples.\n",
+    "3. Create a list of dataframes containing the different splits of negative examples.\n",
+    "4. Concat the positive and negative examples back together.\n",
+    "    - For each new training set, include a 80% random sample of the positive examples to aviod overfitting to the\n",
+    "    postive examples"
    ]
   },
   {
@@ -74,18 +69,11 @@
    },
    "outputs": [],
    "source": [
+    "# Obtaining the number of positive and negative examples \n",
+    "# to determine the number of splits  \n",
     "num_pos_examples = positive_examples.count()[0]\n",
-    "num_neg_examples = full_negative_examples.count()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "num_neg_examples = full_negative_examples.count()[0]\n",
+    "\n",
     "num_splits = int(round(num_neg_examples / num_pos_examples))"
    ]
   },
