--- a/notebooks/ac4119/03-svm-model.ipynb
+++ b/notebooks/ac4119/03-svm-model.ipynb
@@ -278,9 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 730.0923798389267\n",
+      "Elapsed time: 1390.2764463080093\n",
+      "{'train_accuracy': 0.5555555555555556, 'test_accuracy': 0.898435324906732, 'test_auc': 0.5, 'test_ap': 0.101564675093268}\n"
+     ]
+    }
+   ],
    "source": [
     "t = Timer()\n",
     "t.start()\n",
