--- a/notebooks/drh382/dee_draft_LR.ipynb
+++ b/notebooks/drh382/dee_draft_LR.ipynb
@@ -544,7 +544,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
