Updated baseline notebook

--- a/notebooks/ac4119/01-feature-transformation.ipynb
+++ b/notebooks/ac4119/01-feature-transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_path = '../../data/raw/train.csv'\n",
@@ -114,12 +112,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "923       26\n",
+       "924        1\n",
+       "925        2\n",
+       "926        1\n",
+       "927        3\n",
+       "          ..\n",
+       "161142     1\n",
+       "161143     1\n",
+       "161144     1\n",
+       "161145     1\n",
+       "161147     1\n",
+       "Name: ex_id, Length: 125679, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.groupby(train['user_id'])['ex_id'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "user_id\n",
+       "923       26\n",
+       "924        1\n",
+       "925        2\n",
+       "926        1\n",
+       "927        3\n",
+       "          ..\n",
+       "161043     1\n",
+       "161044     1\n",
+       "161046     1\n",
+       "161047     1\n",
+       "161111     1\n",
+       "Name: ex_id, Length: 21006, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[train['label'] == 1].groupby(train['user_id'], train['label'])['ex_id'].count()"
+   ]
   },
   {
    "cell_type": "code",
