Added User's Number of Reviews Lookup

--- a/notebooks/ac4119/01-feature-transformation.ipynb
+++ b/notebooks/ac4119/01-feature-transformation.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_path = '../../data/raw/train.csv'\n",
@@ -112,34 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id\n",
-       "923       26\n",
-       "924        1\n",
-       "925        2\n",
-       "926        1\n",
-       "927        3\n",
-       "          ..\n",
-       "161142     1\n",
-       "161143     1\n",
-       "161144     1\n",
-       "161145     1\n",
-       "161147     1\n",
-       "Name: ex_id, Length: 125679, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train.groupby(train['user_id'])['ex_id'].count()"
+    "base = '/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/data/processed/dev/'\n",
+    "\n",
+    "num_reviews_by_user = train.groupby(train['user_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "num_reviews_by_user.to_csv(base + 'num_reviews_by_user_ac4119.csv', index=False, sep=',')"
    ]
   },
   {
