playing with spelling stuff (haven't organized)

--- a/notebooks/ac4119/01-feature-transformation.ipynb
+++ b/notebooks/ac4119/01-feature-transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_path = '../../data/raw/train.csv'\n",
@@ -49,6 +47,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "130068    Holy mother of God! The Redhead just made me get all blasphemous and stuff.   Have you TRIED that pretzel or fried chicken or THE DELECTABLE COMPLIMENTARY SUGAR COOKIE THEY FEED YOU? Obviously not, or you would be there right now instead of reading this. So I am pretty jealous of YOU right now, because you're probably about to eat at The Redhead while I am most likely stuck in an office 1,547 miles away. Yeah, sucks to be me (not really). The seating is tight, but that didn't bother me. The servers were friendly and the chicken was juicy while remaining crunchy on the outside. This calorie countin' girl totally consumed like 34289034289042390234890234 calories at The Redhead, and ya know what? IT WAS WORTH IT.\n",
+       "Name: review, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "train[train['review'].str.contains('34289034289042390234890234')]['review']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: Passing a negative integer is deprecated in version 1.0 and will not be supported in future version. Instead, use None to not limit the column width.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "192411    Terrible Restaurant. Im giving a 1-star only because there's no negative options. We ordered via delivery. 1. the price they post online is not the real price they will charge you. when we pay for  the delivery, the total cost is $8 more. 2. we paid extra for brown rice but got white rice. when we called them, they refused to take the responsibility and said it was the delivery guy's problem, with terrible attitude. 3. the serving is tiny for the amount they charge you. a sauteed vegetable dish cost $15. three dish cost us $74. I've never given one-star review on Yelp but this Han Dynasty made me have to tell all of you that----DO NOT DO BUSINESS WITH THESE PEOPLE. 极其糟糕的中餐馆。我真想骂你负分滚粗。非常贵，乱收费，分量少，态度差。能想到一切的差事儿都给他们家-­-汉朝--包揽了。3小盘菜74美金。\n",
+       "Name: review, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_colwidth', -1)\n",
+    "train[train['review'].str.contains('极其糟糕的中餐馆')]['review']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pyspellchecker\n",
+    "\n",
+    "aaaaaammmmmaaazing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Typing this place into Help\\'s search bar, I accidently typed \"Brooklyn Trap\" and thought to myself, how apropos.     It\\'s a shame really. Brooklyn Trap has an amazing location and is really, really fun. Mini golf and other games and time wasters on the first floor really do make for a good experience. The problem is the food stinks, it\\'s way overpriced and the wait staff seem like total novices.  The wait times are not only atrocious, but inaccurate.     It\\'s such a shame - this place could\\'ve been one of the greats. Instead, it\\'s one of the worst.'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " from autocorrect import Speller\n",
+    "spell = Speller()\n",
+    "spell(\"\"\"Typing this place into Yelp's search bar, I accidenlly typed \"Brooklyn Crap\" and thought to myself, how appropos.     It's a shame really. Brooklyn Crap has an amazing location and is really, really fun. Mini golf and other games and time wasters on the first floor really do make for a good experience. The problem is the food stinks, it's way overpriced and the wait staff seem like total novices.  The wait times are not only atrocious, but inaccurate.     It's such a shame - this place could've been one of the greats. Instead, it's one of the worst.\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def spellcheck(review):\n",
+    "    try:\n",
+    "        spell = Speller()\n",
+    "        return spell(review)\n",
+    "    except:\n",
+    "        return review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happening\n",
+      "{'henning', 'happening', 'penning'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spellchecker import SpellChecker\n",
+    "\n",
+    "spell = SpellChecker()\n",
+    "\n",
+    "# find those words that may be misspelled\n",
+    "misspelled = spell.unknown(['Yelp','something', 'Crap','is', 'hapenning', 'here'])\n",
+    "\n",
+    "for word in misspelled:\n",
+    "    # Get the one `most likely` answer\n",
+    "    print(spell.correction(word))\n",
+    "\n",
+    "    # Get a list of `likely` options\n",
+    "    print(spell.candidates(word))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -69,15 +208,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"This little place in Soho is wonderful. I had a lamb sandwich and a glass of wine. The price shocked me for how small the serving was, but then again, this is Soho. The staff can be a little snotty and rude, but the food is great, just don't expect world-class service.\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spell(train['review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['review'].apply(lambda x: spellcheck(x) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "cnt_vectorizer = CountVectorizer(stop_words='english', binary=True)\n",
-    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', binary=True)\n",
+    "cnt_vectorizer = CountVectorizer(stop_words='english', binary=True, min_df=5)\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', binary=True, min_df=5)\n",
     "cnt_vectorizer.fit(train['review'])\n",
     "tfidf_vectorizer.fit(train['review'])\n",
     "\n",
@@ -102,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base = '/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/data/processed/dev/'\n",
@@ -256,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(train['review'])"
@@ -265,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(tfidf_vectorizer.idf_)"
@@ -274,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "term_freq = dict(zip(tfidf_vectorizer.get_feature_names(), tfidf_vectorizer.idf_))"
@@ -282,11 +460,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "tfidf_vectorizer.get_feature_names()"
+    "pd.DataFrame(tfidf_vectorizer.get_feature_names()).to_csv(base + 'ac4119_all_terms.csv', index=False, sep=',')"
    ]
   },
   {
@@ -480,6 +660,15 @@
     "for x in tfidf_vectorizer.get_feature_names()[-175:]:\n",
     "    print(x, term_freq[x])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
